Aplicación del hook

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             const [d1,setd1] = React.useState(props.d1);//En este caso estoy guardando el valor actual "d1" que sera guardado en el arreglo.
             const [d2,setd2] = React.useState(props.d2);
             const [d3,setd3] = React.useState(props.d3);
-            //Ya por ultimo solo pase el nombre de la prop a las etiquetas para que solo se imprimieran a mi pagina.
+            //Ya por ultimo solo pase el nombre de las props a las etiquetas para que solo se imprimieran a mi pagina.
                 return(
                 <React.Fragment>
                     <div className="container">
